@@ -1,3 +1,6 @@
+2008-12-11 Use subprocess.Popen instead of os.popen in dviread
+           (Windows problem reported by Jorgen Stenarson) - JKS
+
 2008-12-10 Added Michael's font_manager fix and Jae-Joon's
            figure/subplot fix.  Bumped version number to 0.98.5 - JDH
 
